--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "react-scripts": "5.0.1" 
   },
   "scripts": {
     "start": "react-scripts start",
